# ubuntu-face-login

./: .gitignore  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml  setup  setup-wizard.py  uninstall.sh
scripts/: convert-embeddings.py  export-onnx.py  setup-pam.sh
src/facelogin/: __init__.py  auth.py  camera.py  config.py  detector.py  embedder.py  emitter.py  enroll.py  matcher.py  pam_module.py
ui/: enroll_gtk.py
